# AI_Code

./: README.md  modernization_transformation_spec.md  pyproject.toml
src/application/: emitter_factory.py  ir_builder.py  modernization_service.py  ports.py
src/domain/: ir.py  models.py
src/infrastructure/: emitters.py  pick_basic_analyzer.py
src/interface/: cli.py  web.py
src/interface/templates/: index.html
tests/: test_modernization_service.py  test_web_api.py
